Small z-index fix for mobile menu

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -39,6 +39,7 @@
   -webkit-backdrop-filter: blur(5.1px);
   padding-top: 42px;
   padding-left: 42px;
+  z-index: 400;
 }
 
 /* mobile menu */
@@ -95,7 +96,7 @@
   border-bottom: 1px solid transparent;
 }
 
-.menuItem:global(.active) {
+.desktopMenu .menuItem:global(.active) {
   border-bottom: 1px solid white;
 }
 
